--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,26 +5,29 @@
 
             <nav class="navbar" id="navbar">
                 <a th:href="@{/}" class="nav-link">Inicio</a>
-                <a th:href="@{/#about}" class="nav-link">Nosotros</a>
+                <a th:href="@{/about}" class="nav-link">Nosotros</a>
                 <a th:href="@{/menu}" class="nav-link">Menú</a>
-                <a th:href="@{/orders-details}" class="nav-link">Pedidos</a>
-                <a th:href="@{/#faq}" class="nav-link">FAQ</a>
+                <a th:href="@{/orders_details}" class="nav-link">Pedidos</a>
+                <a th:href="@{/faq}" class="nav-link">FAQ</a>
             </nav>
 
             <div class="icons">
                 <button id="menu-btn" class="fas fa-bars icon-btn menu-btn" aria-label="Menú"></button>
 
-                <!-- Verificar si el usuario está autenticado -->
+                <div th:if="${#authentication.principal != null and #authentication.authorities.toString().contains('admin')}">
+                    <a th:href="@{/admin}" class="fas fa-crown icon-btn tooltip" aria-label="Panel de administrador">
+                        <span class="tooltip-text">Admin</span>
+                    </a>
+                </div>
+
                 <div th:if="${#authentication.principal != null}">
-                    <!-- Si está autenticado, mostrar el perfil -->
-                    <a th:href="${#authentication.authorities.contains('admin') ? '/user' : '/admin'}"
+                    <a th:href="@{/user/{username}(username=${#authentication.name})}"
                        class="fas fa-user icon-btn tooltip"
                        aria-label="Ver Perfil">
                         <span class="tooltip-text" th:text="${#authentication.name}">Ver Perfil</span>
                     </a>
                 </div>
 
-                <!-- Si no está autenticado, mostrar el enlace de login -->
                 <div th:if="${#authentication.principal == null}">
                     <a href="/login" th:href="@{/login}" class="fas fa-user icon-btn tooltip" aria-label="Iniciar sesión">
                         <span class="tooltip-text">Login</span>
@@ -36,7 +39,7 @@
                     </a>
                 </div>
 
-                <a href="/orders" th:href="@{/orders}" class="fas fa-box icon-btn tooltip" aria-label="Mis pedidos">
+                <a th:href="@{/orders_details}" class="fas fa-box icon-btn tooltip" aria-label="Mis pedidos">
                     <span class="tooltip-text">Pedidos</span>
                 </a>
 
