--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Editar perfil de usuario en Diego's Pizza">
 
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
@@ -14,7 +15,7 @@
 
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
-    <link rel="stylesheet" th:href="@{/css/user/form.css}">
+    <link rel="stylesheet" th:href="@{/css/user/edit.css}">
 
     <title th:text="'Editar Perfil de ' + ${user.username}"></title>
 </head>
